force-app/main/default/objects/Contact/fields/Constituent_Employer__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Constituents</relationshipLabel>
    <relationshipName>Constituents</relationshipName>
    <type>Lookup</type>
</CustomField>