force-app/main/default/objects/Contact/fields/Country_of_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Citizenship__c</fullName>
    <label>Country of Citizenship</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFG</fullName>
            </value>
            <value>
                <fullName>ALB</fullName>
            </value>
            <value>
                <fullName>DZA</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>AIA</fullName>
            </value>
            <value>
                <fullName>ATA</fullName>
            </value>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>ARG</fullName>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>ABW</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>AUT</fullName>
            </value>
            <value>
                <fullName>AZE</fullName>
            </value>
            <value>
                <fullName>BHS</fullName>
            </value>
            <value>
                <fullName>BHR</fullName>
            </value>
            <value>
                <fullName>BGD</fullName>
            </value>
            <value>
                <fullName>BRB</fullName>
            </value>
            <value>
                <fullName>BLR</fullName>
            </value>
            <value>
                <fullName>BEL</fullName>
            </value>
            <value>
                <fullName>BLZ</fullName>
            </value>
            <value>
                <fullName>BEN</fullName>
            </value>
            <value>
                <fullName>BMU</fullName>
            </value>
            <value>
                <fullName>ALA</fullName>
            </value>
            <value>
                <fullName>BTN</fullName>
            </value>
            <value>
                <fullName>BOL</fullName>
            </value>
            <value>
                <fullName>BES</fullName>
            </value>
            <value>
                <fullName>BIH</fullName>
            </value>
            <value>
                <fullName>BWA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>