force-app/main/default/objects/Contact/fields/HAM_1812__c.field-meta.xml
<CustomField>
    <fullName>HAM_1812__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates is someone is part of 1812 society</description>
    <label>1812</label>
    <type>Checkbox</type>
</CustomField>