force-app/main/default/objects/Contact/fields/HAM_1YR_1812__c.field-meta.xml
<CustomField>
    <fullName>HAM_1YR_1812__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to adding and removing the giving society of 1812</description>
    <inlineHelpText>This field will be used to adding and removing the giving society of 1812</inlineHelpText>
    <label>1YR 1812</label>
    <type>Checkbox</type>
</CustomField>