force-app/main/default/objects/Contact/fields/HAM_Active_Recurring_Gifts__c.field-meta.xml
<CustomField>
    <fullName>HAM_Active_Recurring_Gifts__c</fullName>
    <description>Number of active recurring gifts</description>
    <label>Active Recurring Gifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>