force-app/main/default/objects/Contact/fields/HAM_All_FY00_Purpose__c.field-meta.xml
<CustomField>
    <fullName>HAM_All_FY00_Purpose__c</fullName>
    <description>This Field is used by CRMA to populate all purposes semi-colon separated</description>
    <inlineHelpText>This Field is used by CRMA to populate all purposes semi-colon separated</inlineHelpText>
    <label>HAM All FY00 Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>