force-app/main/default/objects/Contact/fields/HAM_All_Purposes_Anniversary_Date_1YR__c.field-meta.xml
<CustomField>
    <fullName>HAM_All_Purposes_Anniversary_Date_1YR__c</fullName>
    <description>The date of highest gift amount recorded for any purpose last fiscal year. Populated from CRMA.</description>
    <inlineHelpText>The date of highest gift amount recorded for any purpose last fiscal year.</inlineHelpText>
    <label>All Purposes Anniversary Date - 1YR</label>
    <type>Date</type>
</CustomField>