force-app/main/default/objects/Contact/fields/HAM_Alternate_Chapter__c.field-meta.xml
<CustomField>
    <fullName>HAM_Alternate_Chapter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Chapter</label>
    <referenceTo>HAM_Chapter_Lookup__c</referenceTo>
    <relationshipLabel>Constituents (Alternate Chapter)</relationshipLabel>
    <relationshipName>AlternateChapter</relationshipName>
    <type>Lookup</type>
</CustomField>