force-app/main/default/objects/Contact/fields/HAM_Alum_Suffix__c.field-meta.xml
<CustomField>
    <fullName>HAM_Alum_Suffix__c</fullName>
    <description>Class year abbreviation to form institutional suffix</description>
    <label>Alum Suffix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>