force-app/main/default/objects/Contact/fields/HAM_Bequest_Intention__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bequest_Intention__c</fullName>
    <label>Bequest Intention</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>