force-app/main/default/objects/Contact/fields/HAM_Birth_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Birth_Name__c</fullName>
    <description>Birth name of the constituent. Derived from the last name of the current associated name record of &quot;Birth Name&quot; type.</description>
    <inlineHelpText>Birth name of the constituent. Derived from the last name of the current associated name record of &quot;Birth Name&quot; type.</inlineHelpText>
    <label>Birth Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>