force-app/main/default/objects/Contact/fields/HAM_CareerArea__c.field-meta.xml
<CustomField>
    <fullName>HAM_CareerArea__c</fullName>
    <inlineHelpText>Career Areas populated from PeopleGrove</inlineHelpText>
    <label>Career Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>