force-app/main/default/objects/Contact/fields/HAM_Chapel_Bell__c.field-meta.xml
<CustomField>
    <fullName>HAM_Chapel_Bell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Chapel Bell membership. Populated by CRMA.</description>
    <inlineHelpText>Indicates Chapel Bell membership.</inlineHelpText>
    <label>Chapel Bell</label>
    <type>Checkbox</type>
</CustomField>