force-app/main/default/objects/Contact/fields/HAM_Chapter__c.field-meta.xml
<CustomField>
    <fullName>HAM_Chapter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chapter</label>
    <referenceTo>HAM_Chapter_Lookup__c</referenceTo>
    <relationshipLabel>Constituents</relationshipLabel>
    <relationshipName>Constituents</relationshipName>
    <type>Lookup</type>
</CustomField>