force-app/main/default/objects/Contact/fields/HAM_Children__c.field-meta.xml
<CustomField>
    <fullName>HAM_Children__c</fullName>
    <description>A list of this constituent&apos;s children, alumni children indicated by suffix.</description>
    <inlineHelpText>A list of this constituent&apos;s children, alumni children indicated by suffix.</inlineHelpText>
    <label>Children</label>
    <length>255</length>
    <type>Text</type>
</CustomField>