force-app/main/default/objects/Contact/fields/HAM_Colleague_Person_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Colleague_Person_Status__c</fullName>
    <description>This is used to identify an entity that is no longer a usable contact, but is stored for historical reasons. If there is no value in this field, the record is active.</description>
    <label>HAM Colleague Person Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unverified Death</fullName>
            </value>
            <value>
                <fullName>Merged Duplicate</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>