force-app/main/default/objects/Contact/fields/HAM_Consecutive_Years_of_Giving__c.field-meta.xml
<CustomField>
    <fullName>HAM_Consecutive_Years_of_Giving__c</fullName>
    <description>Displays # of years of consecutive giving by a donor</description>
    <label>Consecutive Years of Giving</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>