force-app/main/default/objects/Contact/fields/HAM_Contactable_by_Mail__c.field-meta.xml
<CustomField>
    <fullName>HAM_Contactable_by_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contactable by Mail</label>
    <type>Checkbox</type>
</CustomField>