force-app/main/default/objects/Contact/fields/HAM_Couper_Guild__c.field-meta.xml
<CustomField>
    <fullName>HAM_Couper_Guild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HAM Couper Guild</label>
    <type>Checkbox</type>
</CustomField>