force-app/main/default/objects/Contact/fields/HAM_Current_Chapters__c.field-meta.xml
<CustomField>
    <fullName>HAM_Current_Chapters__c</fullName>
    <label>Current Chapters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>