force-app/main/default/objects/Contact/fields/HAM_Current_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Current_Date__c</fullName>
    <description>Generate Today&apos;s Date on Constituent object for use in Ruli to populate anniversary dates.</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generate Today&apos;s Date on Constituent object for use in Ruli to populate anniversary dates.</inlineHelpText>
    <label>HAM Current Date</label>
    <type>Date</type>
</CustomField>