force-app/main/default/objects/Contact/fields/HAM_Current_Year_Hamilton_Fund_Collected__c.field-meta.xml
<CustomField>
    <fullName>HAM_Current_Year_Hamilton_Fund_Collected__c</fullName>
    <description>The total amount paid for this year&apos;s Hamilton Fund.</description>
    <inlineHelpText>The total amount paid for this year&apos;s Hamilton Fund.</inlineHelpText>
    <label>Current Year Hamilton Fund Paid</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>