force-app/main/default/objects/Contact/fields/HAM_CYR_1812_Projected__c.field-meta.xml
<CustomField>
    <fullName>HAM_CYR_1812_Projected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a CRMA field that will be set to true or false based on the logic calculations</description>
    <inlineHelpText>This is a CRMA field that will be set to true or false based on the logic calculations</inlineHelpText>
    <label>CYR 1812 Projected</label>
    <type>Checkbox</type>
</CustomField>