force-app/main/default/objects/Contact/fields/HAM_CYR_HF_Ask__c.field-meta.xml
<CustomField>
    <fullName>HAM_CYR_HF_Ask__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The current fiscal year annual fund ask at the constituent level.</description>
    <inlineHelpText>The current fiscal year annual fund ask at the constituent level.</inlineHelpText>
    <label>CYR HF Ask $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>