force-app/main/default/objects/Contact/fields/HAM_CYR_HF_Exp__c.field-meta.xml
<CustomField>
    <fullName>HAM_CYR_HF_Exp__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current fiscal year annual fund expected amount.</description>
    <inlineHelpText>Current fiscal year annual fund expected amount.</inlineHelpText>
    <label>CYR HF Exp $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>