force-app/main/default/objects/Contact/fields/HAM_CYR_HF_Notes__c.field-meta.xml
<CustomField>
    <fullName>HAM_CYR_HF_Notes__c</fullName>
    <description>Brief notes describing the status of the current fiscal year annual fund ask. 255 characters or less.</description>
    <inlineHelpText>Brief notes describing the status of the current fiscal year annual fund ask. 255 characters or less.</inlineHelpText>
    <label>CYR HF Notes</label>
    <type>TextArea</type>
</CustomField>