force-app/main/default/objects/Contact/fields/HAM_CYR_Solicitable__c.field-meta.xml
<CustomField>
    <fullName>HAM_CYR_Solicitable__c</fullName>
    <label>CYR Solicitable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Solicitable for the Hamilton Fund</fullName>
            </value>
            <value>
                <fullName>Solicitable - With Restricted Credit</fullName>
            </value>
            <value>
                <fullName>Solicitable with Hamilton Fund Credit</fullName>
            </value>
            <value>
                <fullName>Solicitable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>