force-app/main/default/objects/Contact/fields/HAM_CYR_Solicitable_As_Of__c.field-meta.xml
<CustomField>
    <fullName>HAM_CYR_Solicitable_As_Of__c</fullName>
    <inlineHelpText>Date CYR Valid from</inlineHelpText>
    <label>CYR Solicitable As Of</label>
    <type>Date</type>
</CustomField>