force-app/main/default/objects/Contact/fields/HAM_CYR_Solicitable_Override__c.field-meta.xml
<CustomField>
    <fullName>HAM_CYR_Solicitable_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CYR Solicitable Override</label>
    <type>Checkbox</type>
</CustomField>