force-app/main/default/objects/Contact/fields/HAM_Date_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>HAM_Date_Last_Modified__c</fullName>
    <formula>DATEVALUE( LastModifiedDate )</formula>
    <label>Date Last Modified</label>
    <type>Date</type>
</CustomField>