force-app/main/default/objects/Contact/fields/HAM_Formatted_Phone__c.field-meta.xml
<CustomField>
    <fullName>HAM_Formatted_Phone__c</fullName>
    <formula>IF(LEN(Phone) = 10,&quot;(&quot; + LEFT( Phone, 3) + &quot;) &quot; + MID(Phone, 4, 3) + &quot;-&quot; + MID(Phone, 7, 4),Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Phone</label>
    <type>Text</type>
</CustomField>