force-app/main/default/objects/Contact/fields/HAM_Founders_Circle__c.field-meta.xml
<CustomField>
    <fullName>HAM_Founders_Circle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Founders Circle</label>
    <type>Checkbox</type>
</CustomField>