force-app/main/default/objects/Contact/fields/HAM_FY00_Collect_Amt_Restricted__c.field-meta.xml
<CustomField>
    <fullName>HAM_FY00_Collect_Amt_Restricted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This filed is populated by CRMA with the amount of pledges amounts paid except for Hamilton fund</description>
    <inlineHelpText>This filed is populated by CRMA with the amount of pledges amounts paid except for Hamilton fund</inlineHelpText>
    <label>HAM FY00 Collect Amt Restricted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>