force-app/main/default/objects/Contact/fields/HAM_FY00_Committed_Ex_BQI_Amt_Restricted__c.field-meta.xml
<CustomField>
    <fullName>HAM_FY00_Committed_Ex_BQI_Amt_Restricted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will be populated by CRMA with sum of all the pledges Committed except the Hamilton fund</description>
    <inlineHelpText>This field will be populated by CRMA with sum of all the pledges Committed except the Hamilton fund</inlineHelpText>
    <label>HAM FY00 Committed Ex BQI Amt Restricted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>