force-app/main/default/objects/Contact/fields/HAM_GP_Suffix__c.field-meta.xml
<CustomField>
    <fullName>HAM_GP_Suffix__c</fullName>
    <label>GP Suffix</label>
    <length>25</length>
    <type>Text</type>
</CustomField>