force-app/main/default/objects/Contact/fields/HAM_Hamilton_Fund_Overdue__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hamilton_Fund_Overdue__c</fullName>
    <description>If the expected amount for the Hamilton Fund is less than the paid amount and todays date is beyond last year&apos;s anniversary date, this prospect is &quot;Overdue&quot;.</description>
    <formula>IF((HAM_CYR_HF_Exp__c&gt;HAM_Current_Year_Hamilton_Fund_Collected__c)  &amp;&amp;   (TODAY()-365) &gt; HAM_HF_Anniversary_Date_1YR__c,&quot;Overdue&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the expected amount for the Hamilton Fund is less than the paid amount and todays date is beyond last year&apos;s anniversary date, this prospect is &quot;Overdue&quot;.</inlineHelpText>
    <label>Hamilton Fund Overdue</label>
    <type>Text</type>
</CustomField>