force-app/main/default/objects/Contact/fields/HAM_Hamilton_Fund_YOY_Net__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hamilton_Fund_YOY_Net__c</fullName>
    <formula>HAM_Current_Year_Hamilton_Fund_Collected__c-HAM_Last_Year_Hamilton_Fund_Collected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HAM Hamilton Fund YOY Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>