force-app/main/default/objects/Contact/fields/HAM_Hard_Credit_Last_Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hard_Credit_Last_Calendar_Year__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to rollup all the hard credits associated with this constituent in the last calendar year (1st Jan to 31st Dec).</description>
    <inlineHelpText>This field is used to rollup all the hard credits associated with this constituent in the last calendar year (1st Jan &apos;24 to 31st Dec &apos;24).</inlineHelpText>
    <label>HAM Hard Credit Last Calendar Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>