force-app/main/default/objects/Contact/fields/HAM_Has_Open_Pledge__c.field-meta.xml
<CustomField>
    <fullName>HAM_Has_Open_Pledge__c</fullName>
    <description>If Outstanding balance is greater than 0 the check else uncheck. Considering blank as zero</description>
    <formula>HAM_Outstanding_Balance__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Outstanding balance is greater than 0 the check else uncheck. Considering blank as zero</inlineHelpText>
    <label>HAM Has Open Pledge</label>
    <type>Checkbox</type>
</CustomField>