force-app/main/default/objects/Contact/fields/HAM_HF_Anniversary_Date_1YR__c.field-meta.xml
<CustomField>
    <fullName>HAM_HF_Anniversary_Date_1YR__c</fullName>
    <label>Hamilton Fund Anniversary Date - 1YR</label>
    <type>Date</type>
</CustomField>