force-app/main/default/objects/Contact/fields/HAM_Household_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_Household_ID__c</fullName>
    <formula>AccountId</formula>
    <label>Household ID</label>
    <type>Text</type>
</CustomField>