force-app/main/default/objects/Contact/fields/HAM_Household_Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>HAM_Household_Prospect_Stage__c</fullName>
    <label>Household Prospect Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>