force-app/main/default/objects/Contact/fields/HAM_Institutional_Suffix__c.field-meta.xml
<CustomField>
    <fullName>HAM_Institutional_Suffix__c</fullName>
    <formula>IF(
    NOT(ISBLANK(HAM_Alum_Suffix__c)),
    HAM_Alum_Suffix__c &amp; IF(
        NOT(ISBLANK(HAM_Surv_Spouse_Suffix__c)) ||
        NOT(ISBLANK(HAM_Parent_Suffix__c)) ||
        NOT(ISBLANK(HAM_GP_Suffix__c)),
        &quot;, &quot;,
        &quot;&quot;
    ),
    &quot;&quot;
) &amp;
IF(
    NOT(ISBLANK(HAM_Surv_Spouse_Suffix__c)),
    HAM_Surv_Spouse_Suffix__c &amp; IF(
        NOT(ISBLANK(HAM_Parent_Suffix__c)) ||
        NOT(ISBLANK(HAM_GP_Suffix__c)),
        &quot;, &quot;,
        &quot;&quot;
    ),
    &quot;&quot;
) &amp;
IF(
    NOT(ISBLANK(HAM_Parent_Suffix__c)),
    HAM_Parent_Suffix__c &amp; IF(
        NOT(ISBLANK(HAM_GP_Suffix__c)),
        &quot;, &quot;,
        &quot;&quot;
    ),
    &quot;&quot;
) &amp;
IF(
    NOT(ISBLANK(HAM_GP_Suffix__c)),
    HAM_GP_Suffix__c,
    &quot;&quot;
)</formula>
    <label>Institutional Suffix</label>
    <type>Text</type>
</CustomField>