force-app/main/default/objects/Contact/fields/HAM_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>