force-app/main/default/objects/Contact/fields/HAM_Is_Anonymous_Comments__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Anonymous_Comments__c</fullName>
    <description>Comments accompanying a designation of &quot;Is Anonymous&quot; equal to true on the constituent.</description>
    <inlineHelpText>Comments accompanying a designation of &quot;Is Anonymous&quot; equal to true on the constituent.</inlineHelpText>
    <label>Is Anonymous Comments</label>
    <type>TextArea</type>
</CustomField>