force-app/main/default/objects/Contact/fields/HAM_Is_Faculty__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Faculty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is a flag set from LITS team which would indicate if the constituent is a faculty at Hamilton or not.</description>
    <inlineHelpText>This field is a flag set from LITS team which would indicate if the constituent is a faculty at Hamilton or not.</inlineHelpText>
    <label>HAM Is Faculty</label>
    <type>Checkbox</type>
</CustomField>