force-app/main/default/objects/Contact/fields/HAM_Is_Magazine_Eligible__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Magazine_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked by CRMA if the conditions are matched</description>
    <inlineHelpText>This field is checked by CRMA if the conditions are matched</inlineHelpText>
    <label>HAM Is Magazine Eligible?</label>
    <type>Checkbox</type>
</CustomField>