force-app/main/default/objects/Contact/fields/HAM_Is_Primary_Constituent__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Primary_Constituent__c</fullName>
    <description>Indicates whether this constituent is also the primary constituent on the household.</description>
    <formula>IF(Id = Account.ucinn_ascendv2__Primary_Contact__r.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether this constituent is also the primary constituent on the household.</inlineHelpText>
    <label>Is Primary Constituent</label>
    <type>Checkbox</type>
</CustomField>