force-app/main/default/objects/Contact/fields/HAM_Is_Solicitable__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Solicitable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Solicitable (HAM)</label>
    <type>Checkbox</type>
</CustomField>