force-app/main/default/objects/Contact/fields/HAM_JBA__c.field-meta.xml
<CustomField>
    <fullName>HAM_JBA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JBA</label>
    <type>Checkbox</type>
</CustomField>