force-app/main/default/objects/Contact/fields/HAM_JBA_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>HAM_JBA_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JBA Anonymous</label>
    <type>Checkbox</type>
</CustomField>