force-app/main/default/objects/Contact/fields/HAM_JEDI_link__c.field-meta.xml
<CustomField>
    <fullName>HAM_JEDI_link__c</fullName>
    <description>This field is used to generate and help users go back to JEDI</description>
    <formula>HYPERLINK(&quot;/lightning/n/JEDI_Overview?c__recordId=&quot; &amp;  Id , &quot;Go to JEDI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to generate and help users go back to JEDI</inlineHelpText>
    <label>JEDI link</label>
    <type>Text</type>
</CustomField>