force-app/main/default/objects/Contact/fields/HAM_Largest_AF_Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Largest_AF_Pledge_Amount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This field is populated by CRMA with value of the largest AF pledge by this constituent</description>
    <inlineHelpText>This field is populated by CRMA with value of the largest AF pledge by this constituent</inlineHelpText>
    <label>HAM Largest AF Pledge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>