force-app/main/default/objects/Contact/fields/HAM_Largest_AF_Pledge_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Largest_AF_Pledge_Date__c</fullName>
    <description>This field is populated by CRMA with date of the largest AF pledge by this constituent</description>
    <inlineHelpText>This field is populated by CRMA with date of the largest AF pledge by this constituent</inlineHelpText>
    <label>HAM Largest AF Pledge Date</label>
    <type>Date</type>
</CustomField>